--- a/templates/index.html
+++ b/templates/index.html
@@ -1,94 +1,83 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
-    <script src="../static/assets/js/graph.js"></script>
-
+    <link rel="stylesheet" href="../static/assets/css/style.css">
     <title>Filters </title>
     <style>
-    .importFilter 
-    {
-        background: rgb(35, 73, 73);
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        height: 40px;
-        width: 130px;
-    }
-    .button
-    {
-        background: rgb(35, 73, 73);
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        height: 40px;
-        width: 130px;
-    }
-    /*Lines(Axes) styling*/
-    #horizontal{
-            width: 200px;
-            height: 100px;
-            border-bottom: 3px solid rgb(11, 11, 11);
-            position: absolute;
-        }
-    #vertical{
-            border-left: 3px solid rgb(3, 3, 3);
-            height: 200px;
-            margin-left: 100px;
-            position: absolute;
-            /* margin-top: 212px;
-            left: 105px; */
-            /* margin-left: -3px; */
-            /* top: 0; */
-        }
+
     </style>
 
 </head>
 
 <body>
     <!--Unit circle with zero, pole, remove and conjugate features-->
-    <div class="column">
-        <input type="radio" id="zero" name="add" checked="true" />Add Zeros
-        <input type="radio" id="pole" name="add" />Add Poles
-        <input type="checkbox" id="remove" name="Remove" />Remove
-        </label>
-        <input type="checkbox" id="conj">
-        Draw Conjugate
-        <div id="circle" style="background-color: rgb(93, 91, 91); width: 200px; 
-        height: 200px; border-radius: 50%;">
-        <div class = 'line' id="vertical"></div>
-        <div class="line" id="horizontal"></div>
+    <div class="contaner">
+        <div class="first_col">
+
+            <div style="background-color: #d3d3d3; width: 260px;
+    border-radius: 1.5rem;
+            padding: 10px; ">
+                <div class="smile-rating-container">
+                    <div class="smile-rating-toggle-container">
+                        <form class="submit-rating">
+                            <input id="zero" name="satisfaction" type="radio" checked />
+                            <input id="pole" name="satisfaction" type="radio" />
+                            <label for="zero" class="rating-label rating-label-meh">zero</label>
+                            <div class="smile-rating-toggle"></div>
+                            <div class="toggle-rating-pill"></div>
+                            <label for="pole" class="rating-label rating-label-fun">pole</label>
+                        </form>
+                    </div>
+                </div>
+                <div id="circle">
+                    <div class='line' id="vertical"></div>
+                    <div class="line" id="horizontal"></div>
+                </div>
+                <input type="checkbox" id="remove" name="Remove" />Remove
+                </label>
+                <input type="checkbox" id="conj">
+                Draw Conjugate
+            </div>
+
+
+        </div>
+        <div class="second_col">
+            <div id="track_pad"></div>
+            <div id="plot"></div>
+            <div id="out_plot"></div>
+            <div class="back"></div>
+            <div class="back2"></div>
+        </div>
     </div>
-    <!-- <label>Upload Signal</label> -->
     <div class="column">
-        <form action = "http://localhost:5000/importFilter" method = "POST" 
-        enctype = "multipart/form-data">
-        <input type = "file" name = "uploaded_filter" />
-        <input type = "submit"/>
-        </form>
-        <button >
-
-        <button >
-            <a style="text-decoration:none" href="static/assets/data/Zeros_poles.csv" download> Export Filter</a>
-        </button>
-
         <!-- <label>Upload Signal</label> -->
-        <form action = "http://localhost:5000/importSignal" method = "POST" 
-        enctype = "multipart/form-data">
-        <input type = "file" name = "uploaded_signal" />
-        <input type = "submit"/>
+        <div class="column">
+            <form action="http://localhost:5000/importFilter" method="POST" enctype="multipart/form-data">
+                <input type="file" name="uploaded_filter" />
+                <input type="submit" />
             </form>
+            <button>
 
-        <div id="plot1"></div>
-        <div id="plot2"></div>
-    </div>
+                <button>
+                    <a style="text-decoration:none" href="static/assets/data/Zeros_poles.csv" download> Export
+                        Filter</a>
+                </button>
+
+                <!-- <label>Upload Signal</label> -->
+                <form action="http://localhost:5000/importSignal" method="POST" enctype="multipart/form-data">
+                    <input type="file" name="uploaded_signal" />
+                    <input type="submit" />
+                </form>
+
+                <div id="plot1"></div>
+                <div id="plot2"></div>
+
+        </div>
+        <script src="../static/assets/js/graph.js"></script>
 </body>
 <script src="../static/assets/js/TEST.js"></script>
+
+
 </html>
