--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/assets/css/style.css">
+    <meta charset="UTF-8">
     <title>Filters </title>
     <style>
 
