--- a/templates/index.html
+++ b/templates/index.html
@@ -128,9 +128,9 @@
     <div class="column">
         <!-- <label>Upload Signal</label> -->
         <div class="column">
-            <form action="http://localhost:5000/importFilter" method="POST" enctype="multipart/form-data">
-                <input type="file" name="uploaded_filter" />
-                <input type="submit" />
+            <form method="POST" enctype="multipart/form-data">
+                <input type="file" name="uploaded_filter" onchange="upload_signal()" />
+                <!-- <input type="submit" /> -->
             </form>
 
             <button>
