--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
             <!-- <label>Upload Signal</label> -->
             <form method="POST" enctype="multipart/form-data">
                 <input type="file" name="uploaded_signal" onchange="upload_signal()" />
-                <input type="submit" />
+                <!-- <input type="submit" /> -->
             </form>
         </div>
     </div>
