--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
         <!-- <label>Upload Signal</label> -->
         <div class="column">
             <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="uploaded_filter" onchange="upload_filter()" />
+                <input type="file" name="uploaded_filter" id ="uploaded_filter" onchange="upload_filter()" />
                 <!-- <input type="submit" /> -->
             </form>
 
@@ -140,7 +140,7 @@
 
             <!-- <label>Upload Signal</label> -->
             <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="uploaded_signal" onchange="upload_signal()" />
+                <input type="file" name="uploaded_signal" id="uploaded_sig" onchange="upload_signal()" />
                 <!-- <input type="submit" /> -->
             </form>
         </div>
