--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
     <div class="column">
         <!-- <label>Upload Signal</label> -->
         <div class="column">
-            <form method="POST" enctype="multipart/form-data">
+            <form method="POST" enctype="multipart/form-data" id ="filter_upload">
                 <input type="file" name="uploaded_filter" id ="uploaded_filter" onchange="upload_filter()" />
                 <!-- <input type="submit" /> -->
             </form>
@@ -139,7 +139,7 @@
             </button>
 
             <!-- <label>Upload Signal</label> -->
-            <form method="POST" enctype="multipart/form-data">
+            <form method="POST" enctype="multipart/form-data" id ="signal_upload">
                 <input type="file" name="uploaded_signal" id="uploaded_sig" onchange="upload_signal()" />
                 <!-- <input type="submit" /> -->
             </form>
