--- a/templates/allpass.html
+++ b/templates/allpass.html
@@ -1,98 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/splide.min.css"
-    />
 
-    <title>All-Pass</title>
-    <style>
-      * {
-        box-sizing: border-box;
-        font-family: "Inter", sans-serif;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/splide.min.css" />
 
-      body {
-        margin: 4rem 0;
-      }
-      .splide__slide {
-        padding: 0.5%;
-        display: flex;
-        /* justify-content: left; */
-        justify-content:end;
-        background: #ecf0f1;
-      }
+  <title>All-Pass</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: "Inter", sans-serif;
+    }
 
-      .splide__slide__container {
-        width: 600px;
-        text-align: center;
-      }
+    body {
+      margin: 0;
+      /* max-width: 1300px; */
+    }
 
-      .slide__content {
-        margin: 1rem 0;
-        font-size: 1.3rem;
-        width: 100px;
-        height: 75px;
-      }
+    .splide {
+      width: 100%;
+    }
 
-      .slide-img__wrapper {
-        display: flex;
-        align-items: center;
-      }
+    .splide__slide {
+      padding: 0.5%;
+      display: flex;
+      /* justify-content: left; */
+      justify-content: end;
+      background: #ecf0f1;
+    }
 
-      .slide-img {
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        max-width: 100%;
-        max-height: 100%;
-      }
+    .splide__slide__container {
+      width: 600px;
+      text-align: center;
+    }
 
-      .slide-img__caption {
-        margin-left: 1rem;
-      }
+    .slide__content {
+      margin: 1rem 0;
+      font-size: 1.3rem;
+      width: 100px;
+      height: 75px;
+    }
 
-      .slide-img__caption span {
-        color: #2e86c1;
-        font-weight: 500;
-      }
+    .slide-img__wrapper {
+      display: flex;
+      align-items: center;
+    }
 
-      /* Adding custom styling to the pagination */
-      .splide__pagination__page.is-active {
-        /* here I have changed the scale from 1.4 to 1.5 */
-        transform: scale(1.5);
-        /* changed from default bg-color to blue */
-        background: #0b72e7;
-      }
-      .button {
-        background-color: #4caf50; /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        width: min-content;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="main">
+    .slide-img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .slide-img__caption {
+      margin-left: 1rem;
+    }
+
+    .slide-img__caption span {
+      color: #2e86c1;
+      font-weight: 500;
+    }
+
+    /* Adding custom styling to the pagination */
+    .splide__pagination__page.is-active {
+      /* here I have changed the scale from 1.4 to 1.5 */
+      transform: scale(1.5);
+      /* changed from default bg-color to blue */
+      background: #0b72e7;
+    }
+
+    .button {
+      background-color: #4caf50;
+      /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      width: min-content;
+    }
+
+    .allpass_contaner {
+      display: flex;
+      background-color: #d3d3d3;
+      border-radius: 1.5rem;
+      padding: 10px;
+      width: 100%;
+      margin: auto;
+      margin-top: 10px;
+      padding-top: 10px;
+      max-width: 1500px;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .allpass_first_col {
+      width: 40%;
+      height: 550px;
+      display: flex;
+      flex-wrap: wrap;
+      background-color: #9b9b9b76;
+      border-radius: 1.5rem;
+      padding: 20px;
+      padding-bottom: 0px;
+      margin-right: 20px;
+      min-width: 400px;
+    }
+
+    .allpass_second_col {
+      width: 800px;
+      height: 550px;
+      display: flex;
+      flex-direction: column;
+      min-width: 700px;
+    }
+
+    #allpass,
+    #total-phase {
+      height: 300px;
+    }
+
+    .bt {
+      font-family: sans-serif;
+      outline: none;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      padding: 8px;
+      background-color: #080a49f1;
+      cursor: pointer;
+      margin-top: 15px;
+      margin-bottom: 10px;
+      font-size: 1rem;
+      width: 150px;
+      margin-left: 22px;
+    }
+
+    #main {
+      height: 100px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="allpass_contaner">
+    <div class="allpass_first_col">
+      <div id="main">
         <input type="button" id="btAdd" value="Add Element" class="bt" />
         <input type="button" id="btRemove" value="Remove Element" class="bt" />
-        <input type="button" id="btRemoveAll" value="Remove All" class="bt" /><br />
+        <input type="button" id="btRemoveAll" value="Remove All" class="bt" />
+      </div>
     </div>
-    <div id="allpass"></div>
-    <div id="total-phase"></div>
+    <div class="allpass_second_col">
+      <div id="allpass"></div>
+      <div id="total-phase"></div>
+    </div>
+
     <div class="splide">
       <div class="splide__track">
         <ul class="splide__list">
@@ -101,10 +171,10 @@
               <div class="slide__content">
                 <button id="new-all-pass-coef1" value="1">
                   <!-- <img
-                    src="images/imgbin-blood-transfusion.jpg"
-                    alt="buttonpng"
-                    border="0"
-                  /> -->
+                      src="images/imgbin-blood-transfusion.jpg"
+                      alt="buttonpng"
+                      border="0"
+                    /> -->
                 </button>
               </div>
             </div>
@@ -114,10 +184,10 @@
               <div class="slide__content">
                 <button id="new-all-pass-coef2" value="2">
                   <!-- <img
-                    src="images/infusion-pump-line.jpg"
-                    alt="buttonpng"
-                    border="0"
-                  /> -->
+                      src="images/infusion-pump-line.jpg"
+                      alt="buttonpng"
+                      border="0"
+                    /> -->
                 </button>
               </div>
             </div>
@@ -127,10 +197,10 @@
               <div class="slide__content">
                 <button id="new-all-pass-coef3" value="3">
                   <!-- <img
-                    src="images/Screenshot (18).png"
-                    alt="buttonpng"
-                    border="0"
-                  /> -->
+                      src="images/Screenshot (18).png"
+                      alt="buttonpng"
+                      border="0"
+                    /> -->
                 </button>
               </div>
             </div>
@@ -140,10 +210,10 @@
               <div class="slide__content">
                 <button id="new-all-pass-coef4" value="4">
                   <!-- <img
-                    src="images/Screenshot (17).png"
-                    alt="buttonpng"
-                    border="0"
-                  /> -->
+                      src="images/Screenshot (17).png"
+                      alt="buttonpng"
+                      border="0"
+                    /> -->
                 </button>
               </div>
             </div>
@@ -160,12 +230,15 @@
         </ul>
       </div>
     </div>
-  </body>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <!-- <script src="../static/assets/js/graph.js"></script> -->
-  <script src="../static/assets/js/allpass.js"></script>
+  </div>
+
+</body>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<!-- <script src="../static/assets/js/graph.js"></script> -->
+<script src="../static/assets/js/allpass.js"></script>
+
 </html>
