--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                         </form>
                     </div>
                 </div>
-                <div id="circle" style="overflow:hidden;">
+                <div id="circle">
                     <div class="line" id="vertical"></div>
                     <div class="line" id="horizontal"></div>
                 </div>
